# crewAI-trip-planner

./: .gitignore  OpenAIModelfile.txt  README.md  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  test_telemetry.py
.streamlit/: secrets.toml
trip_planner/: __init__.py  agents.py  app.py  guardrails.py  tasks.py  telemetry.py
trip_planner/tools/: __init__.py  calculator_tools.py  search_tools.py  travel_tools.py
venv312/: pyvenv.cfg
venv312/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  dumppdf.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
