[tool.poetry]
name = "trip-planner"
version = "0.1.0"
description = "AI-powered travel planning application"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "trip_planner" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
crewai = "^0.130.0"
langchain = ">=0.3.1,<0.4.0"
langchain-openai = ">=0.2.1,<0.3.0"
langsmith = ">=0.3.18,<0.4.0"
tiktoken = ">=0.8.0"
streamlit = "^1.32.0"
pydantic = "^2.6.1"
plotly = "^5.18.0"
pandas = "^2.2.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
unstructured = '==0.10.25'
pyowm = '3.3.0'
python-dotenv = "1.0.0"
openai = "^1.12.0"
setuptools = "^69.2.0"
opentelemetry-api = ">=1.28.0,<2.0.0"
opentelemetry-sdk = ">=1.28.0,<2.0.0"
opentelemetry-exporter-otlp = ">=1.28.0,<2.0.0"
opentelemetry-instrumentation-crewai = "0.40.11"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E','W','F','I','B','C4','ARG','SIM']
ignore = ['W291','W292','W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]